# tossinvest-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/skills/toss-bump-version/: SKILL.md
.codex/skills/toss-commit-changes/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  chatgpt.md  codex.md  conf.py  deployment.md  index.rst  reverse-proxy.md  security.md  usage.rst
examples/: codex_http_config.toml  codex_stdio_config.toml  env.example.sh  macos_keychain.sh  reverse_proxy_routes.md
examples/compose/: README.md
examples/compose/nginx/: .env.example  compose.yaml  nginx.conf
examples/compose/traefik/: .env.example  compose.yaml
scripts/: inspect_mcp.py  validate_release_tag.py
src/tossinvest_mcp/: __init__.py  __main__.py  cli.py  client_factory.py  config.py  errors.py  health.py  logging.py  oauth.py  server.py  server_http.py  server_stdio.py  tools.py
src/tossinvest_mcp_remote/: __init__.py  __main__.py  accounts.py  cli.py  config.py  confirmations.py  credentials.py  errors.py  health.py  oauth.py  server.py  server_http.py  server_stdio.py  tools.py
tests/: __init__.py  conftest.py  test_client_factory.py  test_commit_messages.py  test_config.py  test_confirmations.py  test_credentials.py  test_health.py  test_http_server.py  test_logging.py  test_release_tag.py  test_server_registration.py  test_stdio_server.py  test_tools.py
